Fix sponsor list on mobile.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -283,9 +283,14 @@ p {
     .sponsor-list {
       @include span-columns(6);
       @include shift(3);
-      li.block {
+      li {
+        list-style-type: none;
         @include span-columns(3 of 6);
         @include omega(2n);
+        @include media($mobile) {
+          @include span-columns(6 of 6);
+          @include omega(1n);
+        }
       }
     }
   }
